# graft

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  TODO.md  api_run_modularity_plan.md  architecture.md  autoload_implementation_plan.md  buffer_union_implementation_plan.md  cc_root_export_plan_2025-12-19.md  component_gui_label_refactor_checklist_2025-12-29.md  component_params_checklist_2025-12-29.md  config_yaml_candidates_const_audit_2025-12-28.md  displace_amplitude_z_bug_plan.md  displace_reimplementation_plan.md  draw_window_close_investigation.md  drop_effect_args_improvement_checklist_2025-12-19.md  drop_effect_port_checklist_2025-12-18.md  effect_benchmark_checklist_2025-12-18.md  effect_benchmark_timeseries_plan_2025-12-20.md  effect_bypass_param_plan_2025-12-20.md  export_image_fbo_plan_2025-12-27.md  extrude_port_checklist_2025-12-18.md  extrude_speedup_checklist_2025-12-19.md  fill_angle_flip_bug_plan.md  fill_effect_speedup_plan_2025-12-19.md  fill_evenodd_grouping_fix_plan_2025-12-20.md  fill_group_param_cycle_plan_2025-12-20.md  gen_g_stubs_effect_param_types_plan_2025-12-20.md  gen_g_stubs_implementation_plan_2025-12-18.md  generate_report_simplify_plan_2025-12-20.md  improvement_index_buffer_numba_impl_plan_2025-12-18.md  improvement_param_resolution_dedup.md  improvement_phase1_impl_2025-12-17.md  improvement_phase1b_gpu_upload_skip_impl_2025-12-18.md  improvement_phase2_mp_draw_impl_2025-12-17.md  improvement_realize_multiprocess.md  improvement_render_layer_upload_optimizations_plan_2025-12-18.md  improvement_text_polyline_start_rotation_for_fill_2025-12-18.md  improvement_text_primitive_impl_plan_2025-12-18.md  (+54 more)
docs/: api_api_split_plan.md  architecture_visualization.md  bug_analysis_layer_style_rows_duplicate.md  bugfix_param_store_duplicate_headers_plan.md  bugfix_param_store_stale_groups_on_op_change_plan.md  dash_effect_migration_checklist.md  fixed_window_plan.md  frame_pipeline_plan.md  geometry_quantize_cleanup_plan.md  layer_plan.md  manual_tests_scriptify_checklist.md  param_store_persistence_plan.md  parameter_gui_fullwidth_group_header_plan.md  parameter_gui_headers_labeling_checklist.md  parameter_gui_impl_plan.md  parameter_gui_no_args_defaults_checklist.md  parameter_gui_phase1_checklist.md  parameter_gui_phase2_checklist.md  parameter_gui_phase3_bool_checklist.md  parameter_gui_phase3_checklist.md  parameter_gui_phase3_choice_checklist.md  parameter_gui_phase3_float_slider_checklist.md  parameter_gui_phase3_int_vec3_checklist.md  parameter_gui_phase3_label_namespace.md  parameter_gui_phase3_labels.md  parameter_gui_phase3_style_impl_plan.md  parameter_gui_phase3_table_3cols_checklist.md  parameter_gui_phase3_table_column_ratio_checklist.md  parameter_gui_phase4_layer_impl_plan.md  parameter_gui_plan.md  parameter_gui_refactor_checklist.md  parameter_gui_runner_integration_checklist.md  parameter_gui_table_refactor_phase2_plan.md  parameter_gui_table_rules_refactor_plan.md  parameter_gui_ui_scale_checklist.md  parameter_quantization_refactor_plan.md  paramstate_default_single_source_checklist.md  plan_affine_effect_port.md  plan_dedup_rgb255_coerce.md  plan_effect_displace_port.md  (+15 more)
sketch/: 251214.py  251228.py  251229.py  main.py  perf_sketch.py  readme.py  readme2.py  t.py  t2.py  test.py
src/: __init__.py
(+701 files in other folders)
