[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafix"
version = "0.0.0"
description = "Line-based geometry toolkit with chained effects and real-time preview."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "numba",
  "shapely",
  "moderngl",
  "pyglet",
  "imgui",
  "fontPens",
  "fontTools",
  "PyYAML",
  "mido",
  "rtmidi",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["grafix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:The py23 module has been deprecated.*:DeprecationWarning:fontTools\\.misc\\.py23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
