[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafix"
version = "0.0.3"
description = "Line-based geometry toolkit with chained effects and real-time preview."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "numpy",
  "numba",
  "shapely",
  "pyclipper",
  "moderngl",
  "pyglet",
  "imgui",
  "fontPens",
  "fontTools",
  "PyOpenGL",
  "PyOpenGL_accelerate",
  "PyYAML",
  "mido",
  "python-rtmidi",
  "psutil",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["grafix*"]

[tool.setuptools.package-data]
grafix = [
  "py.typed",
  "core/primitives/regular_polyhedron/*.npz",
  "resource/default_config.yaml",
  "resource/font/Google_Sans/static/*.ttf",
  "resource/font/Google_Sans/OFL.txt",
  "resource/font/Google_Sans/README.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:The py23 module has been deprecated.*:DeprecationWarning:fontTools\\.misc\\.py23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
